--- a/packages/limeberry-components/package.json
+++ b/packages/limeberry-components/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "limeberry-components",
+  "name": "@abergavenny/limeberry-components",
   "version": "0.0.1-alpha.0",
   "description": "Stencil Component Starter",
   "license": "MIT",
