--- a/packages/limeberry-components/package.json
+++ b/packages/limeberry-components/package.json
@@ -21,7 +21,8 @@
     "start": "stencil build --dev --watch --serve",
     "test": "stencil test --spec --e2e",
     "test.watch": "stencil test --spec --e2e --watchAll",
-    "generate": "stencil generate"
+    "generate": "stencil generate",
+    "clean:build": "rimraf dist loader www"
   },
   "dependencies": {
     "@stencil/core": "^2.18.0"
@@ -32,7 +33,8 @@
     "@types/jest": "^29.0.3",
     "jest": "^29.0.3",
     "jest-cli": "^29.0.3",
-    "puppeteer": "^18.0.5"
+    "puppeteer": "^18.0.5",
+    "rimraf": "^3.0.2"
   },
   "publishConfig": {
     "access": "public"
