--- a/packages/vue-limeberry-components/package.json
+++ b/packages/vue-limeberry-components/package.json
@@ -11,7 +11,7 @@
     },
     "./dist/styles.css": "./dist/styles.css"
   },
-  "types": "./dist/index.d.ts",
+  "typings": "./dist/index.d.ts",
   "files": [
     "dist",
     "types/*.d.ts"
@@ -19,15 +19,19 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "build:dts": "vue-tsc --declaration --emitDeclarationOnly && vite build",
+    "preview": "vite preview",
+    "clean:build": "rimraf dist"
   },
   "devDependencies": {
     "@abergavenny/limeberry-components": "^0.0.3-alpha.0",
+    "@rollup/plugin-typescript": "^8.5.0",
     "@vitejs/plugin-vue": "^3.1.0",
+    "rimraf": "^3.0.2",
     "typescript": "^4.6.4",
     "vite": "^3.1.0",
     "vue": "^3.2.37",
-    "vue-tsc": "^0.40.4"
+    "vue-tsc": "^0.40.13"
   },
   "publishConfig": {
     "access": "public"
