--- a/packages/vue-limeberry-components/package.json
+++ b/packages/vue-limeberry-components/package.json
@@ -9,7 +9,7 @@
       "import": "./dist/index.js",
       "require": "./dist/index.cjs"
     },
-    "./dist/styles.css": "./dist/styles.css"
+    "./dist/style.css": "./dist/style.css"
   },
   "typings": "./dist/index.d.ts",
   "files": [
@@ -19,7 +19,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "build:dts": "vue-tsc --declaration --emitDeclarationOnly && vite build",
+    "build:dts": "vue-tsc --declaration --emitDeclarationOnly",
     "preview": "vite preview",
     "clean:build": "rimraf dist"
   },
